api/dsl/build/results/parser.js
// Parser généré automatiquement à partir de dsl.pegjs
// Ne pas modifier ce fichier directement
// Généré le: 2025-07-27T14:19:27.122Z

/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { Start: peg$parseStart },
      peg$startRuleFunction  = peg$parseStart,

      peg$c0 = function(program) { return program; },
      peg$c1 = function(statements) {
            return {
              type: 'Program',
              statements: statements
            };
          },
      peg$c2 = "RULE",
      peg$c3 = peg$literalExpectation("RULE", false),
      peg$c4 = /^[a-zA-Z0-9_]/,
      peg$c5 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false),
      peg$c6 = "(",
      peg$c7 = peg$literalExpectation("(", false),
      peg$c8 = ")",
      peg$c9 = peg$literalExpectation(")", false),
      peg$c10 = "ENDRULE",
      peg$c11 = peg$literalExpectation("ENDRULE", false),
      peg$c12 = function(name, params, body) {
            return {
              type: 'FunctionDefinition',
              name: name,
              parameters: params || [],
              body: body
            };
          },
      peg$c13 = "SET",
      peg$c14 = peg$literalExpectation("SET", false),
      peg$c15 = "=",
      peg$c16 = peg$literalExpectation("=", false),
      peg$c17 = ";",
      peg$c18 = peg$literalExpectation(";", false),
      peg$c19 = function(name, expr) {
            return {
              type: 'SetStatement',
              name: name,
              expression: expr
            };
          },
      peg$c20 = "CALL",
      peg$c21 = peg$literalExpectation("CALL", false),
      peg$c22 = function(name, args) {
            return {
              type: 'CallStatement',
              name: name,
              arguments: args || []
            };
          },
      peg$c23 = "LOG",
      peg$c24 = peg$literalExpectation("LOG", false),
      peg$c25 = function(expr) {
            return {
              type: 'LogStatement',
              expression: expr
            };
          },
      peg$c26 = "EXPORT",
      peg$c27 = peg$literalExpectation("EXPORT", false),
      peg$c28 = function(name) {
            return {
              type: 'ExportStatement',
              name: name
            };
          },
      peg$c29 = ",",
      peg$c30 = peg$literalExpectation(",", false),
      peg$c31 = function(first, rest) {
            return [first].concat(rest.map(r => r[3]));
          },
      peg$c32 = function(statements) {
            return {
              type: 'BlockStatement',
              statements: statements
            };
          },
      peg$c33 = function(stmt) {
            return stmt;
          },
      peg$c34 = "RETURN",
      peg$c35 = peg$literalExpectation("RETURN", false),
      peg$c36 = function(expr) {
            return {
              type: 'ReturnStatement',
              expression: expr
            };
          },
      peg$c37 = function(expr) {
            return {
              type: 'ExpressionStatement',
              expression: expr
            };
          },
      peg$c38 = "?",
      peg$c39 = peg$literalExpectation("?", false),
      peg$c40 = ":",
      peg$c41 = peg$literalExpectation(":", false),
      peg$c42 = function(condition, consequent, alternate) {
            return {
              type: 'ConditionalExpression',
              condition: condition,
              consequent: consequent,
              alternate: alternate
            };
          },
      peg$c43 = "||",
      peg$c44 = peg$literalExpectation("||", false),
      peg$c45 = "OR",
      peg$c46 = peg$literalExpectation("OR", false),
      peg$c47 = function(left, rest) {
            return rest.reduce((acc, curr) => ({
              type: 'BinaryExpression',
              operator: curr[1],
              left: acc,
              right: curr[3]
            }), left);
          },
      peg$c48 = "&&",
      peg$c49 = peg$literalExpectation("&&", false),
      peg$c50 = "AND",
      peg$c51 = peg$literalExpectation("AND", false),
      peg$c52 = "==",
      peg$c53 = peg$literalExpectation("==", false),
      peg$c54 = "!=",
      peg$c55 = peg$literalExpectation("!=", false),
      peg$c56 = "<>",
      peg$c57 = peg$literalExpectation("<>", false),
      peg$c58 = function(left, rest) {
            return rest.reduce((acc, curr) => ({
              type: 'BinaryExpression',
              operator: curr[1] === '<>' ? '!=' : curr[1],
              left: acc,
              right: curr[3]
            }), left);
          },
      peg$c59 = "<=",
      peg$c60 = peg$literalExpectation("<=", false),
      peg$c61 = ">=",
      peg$c62 = peg$literalExpectation(">=", false),
      peg$c63 = "<",
      peg$c64 = peg$literalExpectation("<", false),
      peg$c65 = ">",
      peg$c66 = peg$literalExpectation(">", false),
      peg$c67 = "+",
      peg$c68 = peg$literalExpectation("+", false),
      peg$c69 = "-",
      peg$c70 = peg$literalExpectation("-", false),
      peg$c71 = "*",
      peg$c72 = peg$literalExpectation("*", false),
      peg$c73 = "/",
      peg$c74 = peg$literalExpectation("/", false),
      peg$c75 = "%",
      peg$c76 = peg$literalExpectation("%", false),
      peg$c77 = "^",
      peg$c78 = peg$literalExpectation("^", false),
      peg$c79 = "**",
      peg$c80 = peg$literalExpectation("**", false),
      peg$c81 = function(left, rest) {
            return rest.reduce((acc, curr) => ({
              type: 'BinaryExpression',
              operator: '^',
              left: acc,
              right: curr[3]
            }), left);
          },
      peg$c82 = "!",
      peg$c83 = peg$literalExpectation("!", false),
      peg$c84 = "NOT",
      peg$c85 = peg$literalExpectation("NOT", false),
      peg$c86 = function(operator, operand) {
            return {
              type: 'UnaryExpression',
              operator: operator === 'NOT' ? '!' : operator,
              operand: operand
            };
          },
      peg$c87 = function(left, rest) {
            return rest.reduce((acc, curr) => {
              if (curr.type === 'MemberExpression') {
                return {
                  type: 'MemberExpression',
                  object: acc,
                  property: curr.property,
                  computed: curr.computed
                };
              }
              return acc;
            }, left);
          },
      peg$c88 = "[",
      peg$c89 = peg$literalExpectation("[", false),
      peg$c90 = "]",
      peg$c91 = peg$literalExpectation("]", false),
      peg$c92 = function(property) {
            return {
              type: 'MemberExpression',
              property: property,
              computed: true
            };
          },
      peg$c93 = ".",
      peg$c94 = peg$literalExpectation(".", false),
      peg$c95 = function(property) {
            return {
              type: 'MemberExpression',
              property: property,
              computed: false
            };
          },
      peg$c96 = function(expr) { return expr; },
      peg$c97 = function(name, args) {
            return {
              type: 'FunctionCall',
              name: name,
              arguments: args || []
            };
          },
      peg$c98 = function(name) {
            return {
              type: 'Variable',
              name: name
            };
          },
      peg$c99 = function(elements) {
            return {
              type: 'ArrayExpression',
              elements: elements || []
            };
          },
      peg$c100 = function(number) {
            return {
              type: 'NumberLiteral',
              value: number
            };
          },
      peg$c101 = "\"",
      peg$c102 = peg$literalExpectation("\"", false),
      peg$c103 = function(chars) {
            return {
              type: 'StringLiteral',
              value: chars.join('')
            };
          },
      peg$c104 = "'",
      peg$c105 = peg$literalExpectation("'", false),
      peg$c106 = "TRUE",
      peg$c107 = peg$literalExpectation("TRUE", false),
      peg$c108 = "true",
      peg$c109 = peg$literalExpectation("true", false),
      peg$c110 = function() {
            return {
              type: 'BooleanLiteral',
              value: true
            };
          },
      peg$c111 = "FALSE",
      peg$c112 = peg$literalExpectation("FALSE", false),
      peg$c113 = "false",
      peg$c114 = peg$literalExpectation("false", false),
      peg$c115 = function() {
            return {
              type: 'BooleanLiteral',
              value: false
            };
          },
      peg$c116 = "NULL",
      peg$c117 = peg$literalExpectation("NULL", false),
      peg$c118 = "null",
      peg$c119 = peg$literalExpectation("null", false),
      peg$c120 = function() {
            return {
              type: 'NullLiteral',
              value: null
            };
          },
      peg$c121 = function(float) { return parseFloat(float); },
      peg$c122 = function(integer) { return parseInt(integer, 10); },
      peg$c123 = function(digits, fractional, exponent) {
            return digits + "." + (fractional || "") + (exponent || "");
          },
      peg$c124 = function(fractional, exponent) {
            return "." + fractional + (exponent || "");
          },
      peg$c125 = function(digits, exponent) {
            return digits + exponent;
          },
      peg$c126 = function(digits) { return digits; },
      peg$c127 = /^[0-9]/,
      peg$c128 = peg$classExpectation([["0", "9"]], false, false),
      peg$c129 = function(digits) { return digits.join(''); },
      peg$c130 = /^[eE]/,
      peg$c131 = peg$classExpectation(["e", "E"], false, false),
      peg$c132 = /^[+\-]/,
      peg$c133 = peg$classExpectation(["+", "-"], false, false),
      peg$c134 = function(sign, digits) {
            return "e" + (sign || "") + digits;
          },
      peg$c135 = /^[a-zA-Z_]/,
      peg$c136 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false),
      peg$c137 = function(first, rest) {
            return first + rest.join('');
          },
      peg$c138 = "\\",
      peg$c139 = peg$literalExpectation("\\", false),
      peg$c140 = peg$anyExpectation(),
      peg$c141 = function(char) { return char; },
      peg$c142 = function(sequence) { return sequence; },
      peg$c143 = "b",
      peg$c144 = peg$literalExpectation("b", false),
      peg$c145 = function() { return "\b"; },
      peg$c146 = "f",
      peg$c147 = peg$literalExpectation("f", false),
      peg$c148 = function() { return "\f"; },
      peg$c149 = "n",
      peg$c150 = peg$literalExpectation("n", false),
      peg$c151 = function() { return "\n"; },
      peg$c152 = "r",
      peg$c153 = peg$literalExpectation("r", false),
      peg$c154 = function() { return "\r"; },
      peg$c155 = "t",
      peg$c156 = peg$literalExpectation("t", false),
      peg$c157 = function() { return "\t"; },
      peg$c158 = "v",
      peg$c159 = peg$literalExpectation("v", false),
      peg$c160 = function() { return "\v"; },
      peg$c161 = "0",
      peg$c162 = peg$literalExpectation("0", false),
      peg$c163 = function() { return "\0"; },
      peg$c164 = "u",
      peg$c165 = peg$literalExpectation("u", false),
      peg$c166 = function(digits) {
            return String.fromCharCode(parseInt(digits, 16));
          },
      peg$c167 = "x",
      peg$c168 = peg$literalExpectation("x", false),
      peg$c169 = /^[0-9a-fA-F]/,
      peg$c170 = peg$classExpectation([["0", "9"], ["a", "f"], ["A", "F"]], false, false),
      peg$c171 = "//",
      peg$c172 = peg$literalExpectation("//", false),
      peg$c173 = /^[^\n\r]/,
      peg$c174 = peg$classExpectation(["\n", "\r"], true, false),
      peg$c175 = "/*",
      peg$c176 = peg$literalExpectation("/*", false),
      peg$c177 = "*/",
      peg$c178 = peg$literalExpectation("*/", false),
      peg$c179 = /^[ \t\n\r]/,
      peg$c180 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$resultsCache = {},

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseStart() {
    var s0, s1, s2, s3;

    var key    = peg$currPos * 46 + 0,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseProgram();
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseProgram() {
    var s0, s1, s2;

    var key    = peg$currPos * 46 + 1,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseStatement();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseStatement();
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c1(s1);
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseStatement() {
    var s0;

    var key    = peg$currPos * 46 + 2,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$parseFunctionDefinition();
    if (s0 === peg$FAILED) {
      s0 = peg$parseSetStatement();
      if (s0 === peg$FAILED) {
        s0 = peg$parseCallStatement();
        if (s0 === peg$FAILED) {
          s0 = peg$parseLogStatement();
          if (s0 === peg$FAILED) {
            s0 = peg$parseExportStatement();
            if (s0 === peg$FAILED) {
              s0 = peg$parseExpressionStatement();
            }
          }
        }
      }
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseFunctionDefinition() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16, s17;

    var key    = peg$currPos * 46 + 3,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 4) === peg$c2) {
        s2 = peg$c2;
        peg$currPos += 4;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$currPos;
        peg$silentFails++;
        if (peg$c4.test(input.charAt(peg$currPos))) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        peg$silentFails--;
        if (s4 === peg$FAILED) {
          s3 = void 0;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseIdentifier();
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 40) {
                  s7 = peg$c6;
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c7); }
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parseParameterList();
                    if (s9 === peg$FAILED) {
                      s9 = null;
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parse_();
                      if (s10 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 41) {
                          s11 = peg$c8;
                          peg$currPos++;
                        } else {
                          s11 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c9); }
                        }
                        if (s11 !== peg$FAILED) {
                          s12 = peg$parse_();
                          if (s12 !== peg$FAILED) {
                            s13 = peg$parseFunctionBody();
                            if (s13 !== peg$FAILED) {
                              s14 = peg$parse_();
                              if (s14 !== peg$FAILED) {
                                if (input.substr(peg$currPos, 7) === peg$c10) {
                                  s15 = peg$c10;
                                  peg$currPos += 7;
                                } else {
                                  s15 = peg$FAILED;
                                  if (peg$silentFails === 0) { peg$fail(peg$c11); }
                                }
                                if (s15 !== peg$FAILED) {
                                  s16 = peg$currPos;
                                  peg$silentFails++;
                                  if (peg$c4.test(input.charAt(peg$currPos))) {
                                    s17 = input.charAt(peg$currPos);
                                    peg$currPos++;
                                  } else {
                                    s17 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c5); }
                                  }
                                  peg$silentFails--;
                                  if (s17 === peg$FAILED) {
                                    s16 = void 0;
                                  } else {
                                    peg$currPos = s16;
                                    s16 = peg$FAILED;
                                  }
                                  if (s16 !== peg$FAILED) {
                                    s17 = peg$parse_();
                                    if (s17 !== peg$FAILED) {
                                      peg$savedPos = s0;
                                      s1 = peg$c12(s5, s9, s13);
                                      s0 = s1;
                                    } else {
                                      peg$currPos = s0;
                                      s0 = peg$FAILED;
                                    }
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
